UT for expandedFilterByCategorie